# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.github/workflows/: audit.yml
configuration/: base.yaml  local.yaml  production.yaml
doc/: request.http
migrations/: 20240916161531_create_subscriptions_table.sql  20240920075135_add_status_to_subscriptions.sql  20240920075615_make_status_not_null_in_subscription.sql  20240920075926_create_subscription_token_table.sql  20240921122501_create_users_table.sql  20240922091837_seed_user.sql  20240922152659_create_idempotency_table.sql  20240923025706_create_newsletter_issues_table.sql  20240923025932_create_issue_delivery_queue_table.sql
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletters/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
